--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 		"ext-dom"            : "*",
 		"ext-filter"         : "*",
 		"composer/installers": ">1.0.12",
-		"mediawiki/bootstrap": ">1.1"
+		"mediawiki/bootstrap": "~4.6"
 	},
 	"autoload"   : {
 		"files": [ "Chameleon.php", "src/SkinChameleon.php" ],
